WIP change DTO constructor to convert